--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,13 @@ htmlcov/
 dist/
 build/
 
+*.mov
+*.mp4
+*.avi
+*.mkv
+*.wmv
+*.flv
+
 frontend/node_modules/
 frontend/.next/
 frontend/.env*.local
